# mod8

STM32_CryptoAuthLib_Demo_V1.7/: 修改记录.txt
STM32_CryptoAuthLib_Demo_V1.7/Core/: main.c  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.c  stm32f1xx_it.h
STM32_CryptoAuthLib_Demo_V1.7/CryptoAuthLib/: cryptoauthlib.h  mse_basic.c  mse_basic.h  mse_bool.h  mse_compiler.h  mse_config.h  mse_debug.c  mse_debug.h  mse_device.c  mse_device.h  mse_devtypes.h  mse_helpers.c  mse_helpers.h  mse_iface.c  mse_iface.h  mse_status.h  mse_utils_sizes.c  mse_version.h
STM32_CryptoAuthLib_Demo_V1.7/CryptoAuthLib/calib/: calib_aes.c  calib_aes_gcm.c  calib_aes_gcm.h  calib_basic.c  calib_basic.h  calib_checkmac.c  calib_command.c  calib_command.h  calib_counter.c  calib_derivekey.c  calib_ecdh.c  calib_execution.c  calib_execution.h  calib_gendig.c  calib_genkey.c  calib_helpers.c  calib_hmac.c  calib_info.c  calib_kdf.c  calib_lock.c  calib_mac.c  calib_nonce.c  calib_privwrite.c  calib_random.c  calib_read.c  calib_secureboot.c  calib_selftest.c  calib_sha.c  calib_sign.c  calib_updateextra.c  calib_verify.c  calib_write.c
STM32_CryptoAuthLib_Demo_V1.7/CryptoAuthLib/crypto/: mse_crypto_hw_aes.h  mse_crypto_sw.h  mse_crypto_sw_sha2.c  mse_crypto_sw_sha2.h
STM32_CryptoAuthLib_Demo_V1.7/Drivers/: startup_stm32f103xb.s
STM32_CryptoAuthLib_Demo_V1.7/MDK-ARM/: STM32CryptoAuth.uvguix.Lenovo  STM32CryptoAuth.uvoptx  STM32CryptoAuth.uvprojx
STM32_CryptoAuthLib_Demo_V1.7/Test/: CMakeLists.txt
STM32_CryptoAuthLib_Demo_V1.7/Test/Test/: CMakeLists.txt  Test.cpp
(+172 files in other folders)
